--- a/python/docker-compose.yml
+++ b/python/docker-compose.yml
@@ -1,24 +1,32 @@
 # Use postgres/example user/password credentials
-version: '3.9'
+version: '3.8'
 
 services:
-
-  db:
+  postgres:
     image: postgres
-    restart: always
-    # set shared memory limit when using docker-compose
-    shm_size: 128mb
-    # or set shared memory limit when deploy via swarm stack
-    #volumes:
-    #  - type: tmpfs
-    #    target: /dev/shm
-    #    tmpfs:
-    #      size: 134217728 # 128*2^20 bytes = 128Mb
-    environment:
-      POSTGRES_PASSWORD: example
-
-  adminer:
-    image: adminer
+    container_name: local_pgdb
     restart: always
     ports:
-      - 8080:8080
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=od
+      - POSTGRES_PASSWORD=od
+      - POSTGRES_DB=mydb
+    volumes:
+      - local_pgdata:/var/lib/postgresql/data
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin_container
+    restart: always
+    ports:
+      - "8888:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: odoraf@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: odoraf
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+
+volumes:
+  local_pgdata:
+  pgadmin-data:
