example properties file

--- a/python/api-config/us-dev.properties
+++ b/python/api-config/us-dev.properties
@@ -1,3 +1,15 @@
-upstream1=https://goolge.com
-upstream2=https://firefox.com
-upstream3=https://facebook.com
+[PROPERTIES]
+######### ROUTE1 #########
+route1.path=/route1
+route1.methods=GET
+route1.upstream1=https://goolge.com
+route1.upstream2=https://firefox.com
+
+######### ROUTE2 #########
+route2.path=/route2
+route2.methods=GET
+route2.upstream1=https://facebook.com
+
+######### SPEC #########
+asset=hl
+asset.id=mule-health-fgw 
