add helper scripts

--- a/python/api-config/us-dev.yaml
+++ b/python/api-config/us-dev.yaml
@@ -10,3 +10,6 @@ route2:
 asset:
   id: 'mule-health-fgw'
   version: "1.0.0"
+  description: THis is a sample description
+  contactName: OD Oraf
+  contactEmail: poseidonog@gmail.com
