--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -29,12 +29,69 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: Simulate dependency changes
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: 'maven'
+      
+      - name: Upgrade dependencies with Maven
         working-directory: java/my-app
         run: |
-          echo "Simulating dependency version upgrades..."
-          echo "Using pre-created pom.xml.old and pom.xml.new files"
-          ls -la pom.xml*
+          echo "=" * 80
+          echo "UPGRADING MAVEN DEPENDENCIES"
+          echo "=" * 80
+          echo
+          
+          # Backup original pom.xml
+          echo " Backing up original pom.xml..."
+          cp pom.xml pom.xml.old
+          echo " Created pom.xml.old"
+          echo
+          
+          # Check for available dependency updates
+          echo " Checking for dependency updates..."
+          mvn versions:display-dependency-updates
+          echo
+          
+          # Update dependencies to latest versions
+          echo "  Upgrading dependencies..."
+          mvn versions:use-latest-versions -DallowMajorUpdates=false -DallowMinorUpdates=true
+          mvn versions:use-latest-releases
+          echo
+          
+          # Update plugins to latest versions
+          echo "  Upgrading plugins..."
+          mvn versions:use-latest-versions -DallowMajorUpdates=false
+          echo
+          
+          # Clean up Maven backup files
+          echo " Cleaning up Maven backup files..."
+          find . -name "*.versionsBackup" -type f -delete
+          echo " Cleanup complete"
+          echo
+          
+          # Save upgraded pom.xml
+          echo " Saving upgraded pom.xml..."
+          cp pom.xml pom.xml.new
+          echo " Created pom.xml.new"
+          echo
+          
+          # Restore original pom.xml (don't modify the repo)
+          echo "  Restoring original pom.xml..."
+          cp pom.xml.old pom.xml
+          echo " Original pom.xml restored"
+          echo
+          
+          echo "=" * 80
+          echo " DEPENDENCY UPGRADE COMPLETE"
+          echo "=" * 80
+          echo
+          echo "Files created:"
+          echo "  - pom.xml.old (original)"
+          echo "  - pom.xml.new (upgraded)"
+          echo "  - pom.xml (unchanged)"
       
       - name: Generate dependency diff
         id: diff
@@ -49,34 +106,14 @@ jobs:
             cat pom-diff.txt
           fi
       
-      - name: Create summary
-        if: steps.diff.outputs.has_changes == 'true'
-        working-directory: java/my-app
-        run: |
-          echo "## Dependency Updates Summary" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`diff" >> $GITHUB_STEP_SUMMARY
-          cat pom-diff.txt >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
-      
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-      
-      - name: Install dependencies
-        run: |
-          pip install requests beautifulsoup4 lxml
-      
-      - name: Parse dependency changes
-        id: parse
+      - name: Parse dependency changes and generate outputs
         if: steps.diff.outputs.has_changes == 'true'
         run: |
           python3 << 'EOF'
-          import re
-          import json
           import xml.etree.ElementTree as ET
           from datetime import datetime
+          import os
+          import json
           
           def parse_pom_file(pom_file):
               """Parse POM file to extract dependencies and their versions."""
@@ -139,13 +176,40 @@ jobs:
               
               return changes
           
-          # Parse the changes by comparing POM files
+          print("=" * 80)
+          print("PARSING DEPENDENCY CHANGES")
+          print("=" * 80)
+          
+          # Parse the changes
           changes = compare_pom_files(
               'java/my-app/pom.xml.old',
               'java/my-app/pom.xml.new'
           )
           
+          print(f"Found {len(changes)} dependency updates:")
+          for change in changes:
+              print(f"  - {change['artifact']}: {change['old_version']} → {change['new_version']}")
+          print()
+          
+          # Generate GitHub summary in Markdown
+          print("Generating GitHub summary...")
+          summary = f"## Maven Dependency Updates - {datetime.now().strftime('%Y-%m-%d')}\n\n"
+          summary += "The following dependencies were updated:\n\n"
+          summary += "| Artifact | Old Version | New Version |\n"
+          summary += "|----------|-------------|-------------|\n"
+          
+          for change in changes:
+              summary += f"| {change['artifact']} | {change['old_version']} | {change['new_version']} |\n"
+          
+          summary += f"\n**Total updates:** {len(changes)}\n"
+          
+          # Write to GitHub step summary
+          with open(os.environ['GITHUB_STEP_SUMMARY'], 'a') as f:
+              f.write(summary)
+          print("✓ GitHub summary created")
+          
           # Generate Confluence HTML content
+          print("Generating Confluence HTML...")
           html_content = f"""
           <h2>Maven Dependency Updates - {datetime.now().strftime('%Y-%m-%d')}</h2>
           <p>The following dependencies were updated:</p>
@@ -175,16 +239,30 @@ jobs:
           <p><strong>Total updates:</strong> """ + str(len(changes)) + """</p>
           """
           
-          # Save to file
+          # Save Confluence HTML to file
           with open('confluence-content.html', 'w') as f:
               f.write(html_content)
+          print("✓ Confluence HTML created (confluence-content.html)")
           
-          # Save changes as JSON for GitHub output
+          # Save changes as JSON for reference
           with open('changes.json', 'w') as f:
-              json.dump(changes, f)
+              json.dump(changes, f, indent=2)
+          print("✓ Changes JSON created (changes.json)")
           
-          print(f"Found {len(changes)} dependency updates")
+          print()
+          print("=" * 80)
+          print(f"✓ ALL OUTPUTS GENERATED SUCCESSFULLY ({len(changes)} updates)")
+          print("=" * 80)
           EOF
+      
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      
+      - name: Install dependencies
+        run: |
+          pip install requests beautifulsoup4 lxml
       
       - name: Update Confluence Page
         if: steps.diff.outputs.has_changes == 'true'
@@ -216,11 +294,11 @@ jobs:
           print()
           
           if not all([confluence_url, username, api_token, page_id]):
-              print("❌ Missing Confluence credentials. Skipping update.")
-              print(f"  - URL: {'✓' if confluence_url else '✗'}")
-              print(f"  - Username: {'✓' if username else '✗'}")
-              print(f"  - API Token: {'✓' if api_token else '✗'}")
-              print(f"  - Page ID: {'✓' if page_id else '✗'}")
+              print(" Missing Confluence credentials. Skipping update.")
+              print(f"  - URL: {' ' if confluence_url else ' '}")
+              print(f"  - Username: {' ' if username else ' '}")
+              print(f"  - API Token: {' ' if api_token else ' '}")
+              print(f"  - Page ID: {' ' if page_id else ' '}")
               exit(0)
           
           # Read the HTML content to append
@@ -228,7 +306,7 @@ jobs:
           try:
               with open('confluence-content.html', 'r') as f:
                   new_content = f.read()
-              print(f"✓ HTML content loaded ({len(new_content)} characters)")
+              print(f" HTML content loaded ({len(new_content)} characters)")
               print()
               print("Content preview:")
               print("-" * 80)
@@ -236,7 +314,7 @@ jobs:
               print("-" * 80)
               print()
           except FileNotFoundError:
-              print("❌ Error: confluence-content.html not found!")
+              print(" Error: confluence-content.html not found!")
               print("Available files:")
               import os
               for root, dirs, files in os.walk('.'):
@@ -257,7 +335,7 @@ jobs:
           response = requests.get(get_url, auth=auth, headers=headers)
           
           if response.status_code != 200:
-              print(f"❌ Failed to get page: {response.status_code}")
+              print(f" Failed to get page: {response.status_code}")
               print(f"Response: {response.text}")
               exit(1)
           
@@ -266,7 +344,7 @@ jobs:
           current_content = page_data['body']['storage']['value']
           page_title = page_data['title']
           
-          print(f"✓ Current page retrieved successfully")
+          print(f" Current page retrieved successfully")
           print(f"  - Title: {page_title}")
           print(f"  - Current version: {current_version}")
           print(f"  - Current content length: {len(current_content)} characters")
@@ -304,7 +382,7 @@ jobs:
           if response.status_code == 200:
               print()
               print("=" * 80)
-              print("✓ SUCCESS - Confluence page updated!")
+              print(" SUCCESS - Confluence page updated!")
               print("=" * 80)
               print(f"Page URL: {confluence_url}/pages/viewpage.action?pageId={page_id}")
               print(f"Updated to version: {current_version + 1}")
@@ -312,7 +390,7 @@ jobs:
           else:
               print()
               print("=" * 80)
-              print(f"❌ FAILED - Could not update page: {response.status_code}")
+              print(f" FAILED - Could not update page: {response.status_code}")
               print("=" * 80)
               print(f"Response: {response.text}")
               print()
