--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -39,69 +39,15 @@ jobs:
       - name: Upgrade dependencies with Maven
         working-directory: java/my-app
         run: |
-          echo "=" * 80
-          echo "UPGRADING MAVEN DEPENDENCIES"
-          echo "=" * 80
-          echo
-          
-          # Backup original pom.xml
-          echo " Backing up original pom.xml..."
           cp pom.xml pom.xml.old
-          echo " Created pom.xml.old"
-          echo
-          
-          # Check for available dependency updates
-          echo "🔍 Checking for available updates (dependencies & plugins)..."
           mvn versions:display-property-updates
-          echo
-          
-          # Update all versions using properties (dependencies + plugins)
-          echo "⬆️  Upgrading all versions (properties)..."
           mvn versions:update-properties -DallowMajorUpdates=false
-          echo
-          
-          # Clean up Maven backup files
-          echo " Cleaning up Maven backup files..."
-          find . -name "*.versionsBackup" -type f -delete
-          echo " Cleanup complete"
-          echo
-          
-          # Save upgraded pom.xml
-          echo " Saving upgraded pom.xml..."
+          find . -name "*.versionsBackup" -delete
           cp pom.xml pom.xml.new
-          echo " Created pom.xml.new"
-          echo
-          
-          # Restore original pom.xml (don't modify the repo)
-          echo "  Restoring original pom.xml..."
           cp pom.xml.old pom.xml
-          echo " Original pom.xml restored"
-          echo
-          
-          echo "=" * 80
-          echo " DEPENDENCY UPGRADE COMPLETE"
-          echo "=" * 80
-          echo
-          echo "Files created:"
-          echo "  - pom.xml.old (original)"
-          echo "  - pom.xml.new (upgraded)"
-          echo "  - pom.xml (unchanged)"
-      
-      - name: Generate dependency diff
-        id: diff
-        working-directory: java/my-app
-        run: |
-          if diff pom.xml.old pom.xml.new > pom-diff.txt; then
-            echo "has_changes=false" >> $GITHUB_OUTPUT
-            echo "No dependency updates available"
-          else
-            echo "has_changes=true" >> $GITHUB_OUTPUT
-            echo "Dependency updates found:"
-            cat pom-diff.txt
-          fi
       
       - name: Parse dependency changes and generate outputs
-        if: steps.diff.outputs.has_changes == 'true'
+        if: [ -f java/my-app/pom.xml.old ] && [ -f java/my-app/pom.xml.new ]
         run: |
           python3 << 'EOF'
           import xml.etree.ElementTree as ET
@@ -190,68 +136,36 @@ jobs:
               
               return changes
           
-          print("=" * 80)
-          print("PARSING DEPENDENCY CHANGES")
-          print("=" * 80)
-          
           # Parse the changes
           changes = compare_pom_files(
               'java/my-app/pom.xml.old',
               'java/my-app/pom.xml.new'
           )
           
-          print(f"Found {len(changes)} dependency updates:")
-          for change in changes:
-              print(f"  - {change['artifact']}: {change['old_version']} → {change['new_version']}")
-          print()
+          print(f"Found {len(changes)} dependency updates")
           
           # Generate GitHub summary in Markdown
-          print("Generating GitHub summary...")
           summary = f"## Maven Dependency Updates - {datetime.now().strftime('%Y-%m-%d')}\n\n"
-          summary += "The following dependencies were updated:\n\n"
-          summary += "| Artifact | Old Version | New Version |\n"
-          summary += "|----------|-------------|-------------|\n"
+          summary += f"**Total updates: {len(changes)}**\n\n"
           
           for change in changes:
-              summary += f"| {change['artifact']} | {change['old_version']} | {change['new_version']} |\n"
-          
-          summary += f"\n**Total updates:** {len(changes)}\n"
+              summary += f"- **{change['artifact']}**: `{change['old_version']}` → `{change['new_version']}`\n"
           
           # Write to GitHub step summary
           with open(os.environ['GITHUB_STEP_SUMMARY'], 'a') as f:
               f.write(summary)
-          print("✓ GitHub summary created")
           
           # Generate Confluence HTML content
           print("Generating Confluence HTML...")
-          html_content = f"""
-          <h2>Maven Dependency Updates - {datetime.now().strftime('%Y-%m-%d')}</h2>
-          <p>The following dependencies were updated:</p>
-          <table>
-            <thead>
-              <tr>
-                <th>Artifact</th>
-                <th>Old Version</th>
-                <th>New Version</th>
-              </tr>
-            </thead>
-            <tbody>
+          html_content = f"""<h2>Maven Dependency Updates - {datetime.now().strftime('%Y-%m-%d')}</h2>
+          <p><strong>Total updates: {len(changes)}</strong></p>
+          <ul>
           """
-          
+                    
           for change in changes:
-              html_content += f"""
-              <tr>
-                <td>{change['artifact']}</td>
-                <td>{change['old_version']}</td>
-                <td>{change['new_version']}</td>
-              </tr>
-          """
+              html_content += f"  <li><strong>{change['artifact']}</strong>: {change['old_version']} → {change['new_version']}</li>\n"
           
-          html_content += """
-            </tbody>
-          </table>
-          <p><strong>Total updates:</strong> """ + str(len(changes)) + """</p>
-          """
+          html_content += "</ul>"
           
           # Save Confluence HTML to file
           with open('confluence-content.html', 'w') as f:
@@ -275,11 +189,10 @@ jobs:
           python-version: '3.11'
       
       - name: Install dependencies
-        run: |
-          pip install requests beautifulsoup4 lxml
+        run: pip install requests
       
       - name: Update Confluence Page
-        if: steps.diff.outputs.has_changes == 'true'
+        if: [ -f java/my-app/pom.xml.old ] && [ -f java/my-app/pom.xml.new ]
         env:
           CONFLUENCE_URL: ${{ inputs.confluence_url || secrets.CONFLUENCE_URL }}
           CONFLUENCE_USERNAME: ${{ inputs.confluence_username || secrets.CONFLUENCE_USERNAME }}
@@ -298,59 +211,29 @@ jobs:
           api_token = os.environ.get('CONFLUENCE_API_TOKEN')
           page_id = os.environ.get('CONFLUENCE_PAGE_ID')
           
-          print("=" * 80)
-          print("CONFLUENCE UPDATE PROCESS")
-          print("=" * 80)
-          print(f"Confluence URL: {confluence_url}")
-          print(f"Username: {username}")
-          print(f"Page ID: {page_id}")
-          print(f"API Token: {'***' if api_token else 'NOT SET'}")
-          print()
-          
           if not all([confluence_url, username, api_token, page_id]):
-              print(" Missing Confluence credentials. Skipping update.")
-              print(f"  - URL: {' ' if confluence_url else ' '}")
-              print(f"  - Username: {' ' if username else ' '}")
-              print(f"  - API Token: {' ' if api_token else ' '}")
-              print(f"  - Page ID: {' ' if page_id else ' '}")
+              print("Missing Confluence credentials. Skipping update.")
               exit(0)
           
           # Read the HTML content to append
-          print("Reading generated HTML content...")
           try:
               with open('confluence-content.html', 'r') as f:
                   new_content = f.read()
-              print(f" HTML content loaded ({len(new_content)} characters)")
-              print()
-              print("Content preview:")
-              print("-" * 80)
-              print(new_content[:500] + "..." if len(new_content) > 500 else new_content)
-              print("-" * 80)
-              print()
           except FileNotFoundError:
-              print(" Error: confluence-content.html not found!")
-              print("Available files:")
-              import os
-              for root, dirs, files in os.walk('.'):
-                  for file in files:
-                      print(f"  - {os.path.join(root, file)}")
+              print("Error: confluence-content.html not found!")
               exit(1)
           
           # Setup authentication and headers for v2 API
           auth = HTTPBasicAuth(username, api_token)
           headers = {'Content-Type': 'application/json'}
           
-          # Get current page using v2 API
-          # API Reference: https://developer.atlassian.com/cloud/confluence/rest/v2/api-group-page/#api-pages-id-get
-          print(f"Fetching current page content from Confluence...")
+          # Get current page
           get_url = f"{confluence_url}/api/v2/pages/{page_id}?body-format=storage"
-          print(f"GET URL: {get_url}")
-          
           response = requests.get(get_url, auth=auth, headers=headers)
           
           if response.status_code != 200:
-              print(f" Failed to get page: {response.status_code}")
-              print(f"Response: {response.text}")
+              print(f"Failed to get page: {response.status_code}")
+              print(response.text)
               exit(1)
           
           page_data = response.json()
@@ -358,20 +241,10 @@ jobs:
           current_content = page_data['body']['storage']['value']
           page_title = page_data['title']
           
-          print(f" Current page retrieved successfully")
-          print(f"  - Title: {page_title}")
-          print(f"  - Current version: {current_version}")
-          print(f"  - Current content length: {len(current_content)} characters")
-          print()
-          
           # Append new content to existing content
           updated_content = current_content + "\n" + new_content
-          print(f"Preparing update...")
-          print(f"  - New content length: {len(updated_content)} characters")
-          print()
           
-          # Update the page using v2 API
-          # API Reference: https://developer.atlassian.com/cloud/confluence/rest/v2/api-group-page/#api-pages-id-put
+          # Update the page
           update_data = {
               "id": page_id,
               "status": "current",
@@ -387,36 +260,12 @@ jobs:
           }
           
           put_url = f"{confluence_url}/api/v2/pages/{page_id}"
-          print(f"Updating page...")
-          print(f"PUT URL: {put_url}")
-          print(f"New version: {current_version + 1}")
-          
           response = requests.put(put_url, auth=auth, headers=headers, json=update_data)
           
           if response.status_code == 200:
-              print()
-              print("=" * 80)
-              print(" SUCCESS - Confluence page updated!")
-              print("=" * 80)
-              print(f"Page URL: {confluence_url}/pages/viewpage.action?pageId={page_id}")
-              print(f"Updated to version: {current_version + 1}")
-              print()
+              print(f"✓ Confluence page updated: {confluence_url}/pages/viewpage.action?pageId={page_id}")
           else:
-              print()
-              print("=" * 80)
-              print(f" FAILED - Could not update page: {response.status_code}")
-              print("=" * 80)
-              print(f"Response: {response.text}")
-              print()
+              print(f"Failed to update page: {response.status_code}")
+              print(response.text)
               exit(1)
           EOF
-      
-      - name: Upload artifacts
-        if: steps.diff.outputs.has_changes == 'true'
-        uses: actions/upload-artifact@v4
-        with:
-          name: dependency-updates
-          path: |
-            confluence-content.html
-            changes.json
-            java/my-app/pom-diff.txt
